--- a/opskrifter.html
+++ b/opskrifter.html
@@ -10,9 +10,21 @@
     <script src="assets/js/script.js" defer></script>
 </head>
 
-HEJ HEJ 
 <body>
-    <div class="pageWrap"></div>
+    <div class="pageWrap">
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+    </div>
+    <main class="opskriftMain">
+
+    </main>
 </body>
 
 
