--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
 
 HEJ HEJ 
 <body>
-    <div class="pageWrap"></div>
+    
+    <div class="pageWrap">
+        <nav>
+            <ul>
+                <li>Link</li>
+                <li>Link</li>
+                <li>Link</li>
+                <li>Link</li>
+                <li>Link</li>
+            </ul>
+        </nav>
+
+    </div>
 </body>
 
 
