--- a/opskrifter.html
+++ b/opskrifter.html
@@ -14,11 +14,11 @@
     <div class="pageWrap">
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Link</li>
+                <li>Link</li>
+                <li>Link</li>
+                <li>Link</li>
+                <li>Link</li>
             </ul>
         </nav>
     </div>
