--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
 <body>
     
     <div class="pageWrap">
-        <nav>
-            <ul>
-                <li>Link</li>
-                <li>Link</li>
-                <li>Link</li>
-                <li>Link</li>
-                <li>Link</li>
-            </ul>
-        </nav>
+        <header>
+            <div class="logoHeader">
+                <img src="/assets/images/Englerod-logo-hvid.png" alt="Englerod Logo">
+            <div>
+            <nav>
+                <ul>
+                    <li><a href="#">Opskriftsindex</a></li>
+                    <li><a href="#">Food prep</a></li>
+                    <li><a href="#">Køkkenhaven</a></li>
+                    <li><a href="#">Om englerod</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
 
     </div>
 </body>
