--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     
     <div class="pageWrap">
         <header>
-            <div class="logoHeader">
-                <img src="/assets/images/Englerod-logo-hvid.png" alt="Englerod Logo">
-            <div>
+            <img src="/assets/images/Englerod-logo-hvid.png" alt="Englerod Logo">
             <nav>
                 <ul>
                     <li><a href="#">Opskriftsindex</a></li>
@@ -27,6 +25,30 @@
                 </ul>
             </nav>
         </header>
+
+        <main>
+
+        </main>
+
+        <footer>
+            <div class="footerKontakt">
+                <div>
+                    <h3>KONTAKT</h3>
+                </div>
+                <div class="footerKontaktIkoner">
+                    <i>F</i>
+                    <i>I</i>
+                    <i>P</i>
+                    <i>Y</i>
+                </div>
+                <div>
+                    <p>Johanne Mosgaard / johanne@englerod.dk / englerod.dk</p>
+                </div>
+            </div>
+            <div class="footerCopyright">
+                <p>Copyright 2021 ENGLEROD</p>
+            </div>
+        </footer>
 
     </div>
 </body>
