--- a/opskrift.html
+++ b/opskrift.html
@@ -26,9 +26,112 @@
             </nav>
         </header>
 
-        <main>
-
+        <main class="opskriftMain">
+            <h1>Opskrift Overskrift</h1>
+            <img src="/assets/images/Bagt brushetta_low.jpg" alt="Bagt Brushetta">
+            <div class="opskrift">
+                <h2>Opskrift Overskrift</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    A nemo, sint sequi voluptatibus delectus voluptates. 
+                    Laudantium adipisci inventore exercitationem neque, tenetur 
+                    officiis esse! Asperiores, deleniti!
+                </p>
+                <div class="opskriftTags">
+                    <p>Ret: Morgenmad, snack</p>
+                    <p>Antal: 1 person</p>
+                    <p>Forfatter: Johanne Mosgaard</p>
+                    <p>10 minutter</p>
+                </div>
+                <div>
+                    <div class="ingredienser">
+                        <h3>ingredienser</h3>
+                        <ul>
+                            <li>50 g havregryn</li>
+                            <li>50 g havregryn</li>
+                            <li>50 g havregryn</li>
+                            <li>50 g havregryn</li>
+                            <li>50 g havregryn</li>
+                            <li>50 g havregryn</li>
+                            <li>50 g havregryn</li>
+                            <li>50 g havregryn</li>
+                        </ul>
+                    </div>
+                    <div class="fremgangsmåde">
+                        <h3>Sådan gør du</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Doloribus accusantium, unde voluptatibus qui est vero 
+                            necessitatibus quod neque sequi, rerum praesentium! 
+                            Enim quam quisquam iste.
+                        </p>
+                        <h3>Noter</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Doloribus accusantium, unde voluptatibus qui est vero 
+                            necessitatibus quod neque sequi, rerum praesentium! 
+                            Enim quam quisquam iste.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="opskriftKommentar">
+                <img src="/assets/images/Bagt brushetta_low.jpg" alt="Bagt Brushetta">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Perferendis dolores, velit pariatur tenetur error officia 
+                    eiciendis nam sequi nihil rem suscipit quod quo maiores dolor 
+                    aut iste dolorem. Magnam vel at eveniet odio perspiciatis 
+                    molestias mollitia, saepe aliquid. Ad inventore est aspernatur 
+                    reiciendis dolores eum nesciunt minima quibusdam architecto optio.
+                </p>
+            </div>
         </main>
+
+        <section class="opskriftBøger">
+            <div class="opskriftBog">
+                <img src="/assets/images/veganskkøkkenbog.jpg" alt="Vegansk Grundkøkken">
+                <div class="OpskriftBogTekst">
+                    <p>Vegansk grundkøkken
+                        <br>
+                        Johanne Mosgaard
+                        <br>
+                        Bog, indbundet
+                        <br>
+                        Sprog: Dansk
+                    </p>
+                    <button>Køb bogen</button>
+                </div>
+            </div>
+            <div class="opskriftBog">
+                <img src="/assets/images/veganskbog.jpg" alt="Vegansk Bog">
+                <div class="OpskriftBogTekst">
+                    <p>Vegansk grundkøkken
+                        <br>
+                        Johanne Mosgaard
+                        <br>
+                        Bog, indbundet
+                        <br>
+                        Sprog: Dansk
+                    </p>
+                    <button>Køb bogen</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="omForfatter">
+            <img src="/assets/images/portræt.jpg" alt="Johanne Mosgaard">
+            <div class="omForfatterTekst">
+                <h2>Hvem er jeg?</h2>
+               <p>Mit navn er Johanne, jeg er 28 år gammel og bor tæt på Rold Skov
+                   i Nordjylland med min mandm vores datter og to hunde.
+                   <br>
+                   <br>
+                   På min blog Englerod deler jeg min passion for velsmagende og farverig grøntsagsmad.
+                   Jeg dyrker selv en stor del af mine grøntsager og elsker processen fra jord til bord.
+                   <br>
+                   Læs mere
+               </p>
+               <img src="/assets/images/videoScreen.jpg" alt="Youtube Video">
+            </div>
+        </section>
 
         <footer>
             <div class="footerKontakt">
