--- a/opskrift.html
+++ b/opskrift.html
@@ -17,7 +17,7 @@
             <img src="/assets/images/Englerod-logo-hvid.png" alt="Englerod Logo">
             <nav>
                 <ul>
-                    <li><a href="#">Opskriftsindex</a></li>
+                    <li><a href="/index.html">Opskriftsindex</a></li>
                     <li><a href="#">Food prep</a></li>
                     <li><a href="#">Køkkenhaven</a></li>
                     <li><a href="#">Om englerod</a></li>
@@ -29,7 +29,8 @@
         <main class="opskriftMain">
             <h1>Opskrift Overskrift</h1>
             <img src="/assets/images/Bagt brushetta_low.jpg" alt="Bagt Brushetta">
-            <div class="opskrift">
+        </main>
+            <section class="opskrift">
                 <h2>Opskrift Overskrift</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                     A nemo, sint sequi voluptatibus delectus voluptates. 
@@ -72,7 +73,7 @@
                         </p>
                     </div>
                 </div>
-            </div>
+            </section>
             <div class="opskriftKommentar">
                 <img src="/assets/images/Bagt brushetta_low.jpg" alt="Bagt Brushetta">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
@@ -83,7 +84,7 @@
                     reiciendis dolores eum nesciunt minima quibusdam architecto optio.
                 </p>
             </div>
-        </main>
+      
 
         <section class="opskriftBøger">
             <div class="opskriftBog">
@@ -120,16 +121,16 @@
             <img src="/assets/images/portræt.jpg" alt="Johanne Mosgaard">
             <div class="omForfatterTekst">
                 <h2>Hvem er jeg?</h2>
-               <p>Mit navn er Johanne, jeg er 28 år gammel og bor tæt på Rold Skov
-                   i Nordjylland med min mandm vores datter og to hunde.
-                   <br>
-                   <br>
-                   På min blog Englerod deler jeg min passion for velsmagende og farverig grøntsagsmad.
-                   Jeg dyrker selv en stor del af mine grøntsager og elsker processen fra jord til bord.
-                   <br>
-                   Læs mere
-               </p>
-               <img src="/assets/images/videoScreen.jpg" alt="Youtube Video">
+                <p>Mit navn er Johanne, jeg er 28 år gammel og bor tæt på Rold Skov
+                    i Nordjylland med min mandm vores datter og to hunde.
+                    <br>
+                    <br>
+                    På min blog Englerod deler jeg min passion for velsmagende og farverig grøntsagsmad.
+                    Jeg dyrker selv en stor del af mine grøntsager og elsker processen fra jord til bord.
+                    <br>
+                    Læs mere
+                </p>
+                <img src="/assets/images/videoScreen.jpg" alt="Youtube Video">
             </div>
         </section>
 
