--- a/opskrift.html
+++ b/opskrift.html
@@ -88,8 +88,11 @@
 
         <section class="opskriftBøger">
             <div class="opskriftBog">
-                <img src="/assets/images/veganskkøkkenbog.jpg" alt="Vegansk Grundkøkken">
-                <div class="OpskriftBogTekst">
+                <div class="opskriftBogBox">
+                    <img src="/assets/images/veganskkøkkenbog.jpg" alt="Vegansk Grundkøkken">
+                </div>
+                
+                <div class="opskriftBogBox">
                     <p>Vegansk grundkøkken
                         <br>
                         Johanne Mosgaard
@@ -102,9 +105,11 @@
                 </div>
             </div>
             <div class="opskriftBog">
-                <img src="/assets/images/veganskbog.jpg" alt="Vegansk Bog">
-                <div class="OpskriftBogTekst">
-                    <p>Vegansk grundkøkken
+                <div class="opskriftBogBox">
+                    <img src="/assets/images/veganskbog.jpg" alt="Vegansk Bog">
+                </div>
+                <div class="opskriftBogBox">
+                    <p>Vegansk 
                         <br>
                         Johanne Mosgaard
                         <br>
@@ -118,8 +123,10 @@
         </section>
 
         <section class="omForfatter">
-            <img src="/assets/images/portræt.jpg" alt="Johanne Mosgaard">
-            <div class="omForfatterTekst">
+            <div class="omForfatterBox">
+                <img src="/assets/images/portræt.jpg" alt="Johanne Mosgaard">
+            </div>  
+            <div class="omForfatterBox">
                 <h2>Hvem er jeg?</h2>
                 <p>Mit navn er Johanne, jeg er 28 år gammel og bor tæt på Rold Skov
                     i Nordjylland med min mandm vores datter og to hunde.
