opskrift næsten done

--- a/opskrift.html
+++ b/opskrift.html
@@ -31,46 +31,48 @@
             <img src="/assets/images/Bagt brushetta_low.jpg" alt="Bagt Brushetta">
         </main>
             <section class="opskrift">
-                <h2>Opskrift Overskrift</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    A nemo, sint sequi voluptatibus delectus voluptates. 
-                    Laudantium adipisci inventore exercitationem neque, tenetur 
-                    officiis esse! Asperiores, deleniti!
-                </p>
-                <div class="opskriftTags">
-                    <p>Ret: Morgenmad, snack</p>
-                    <p>Antal: 1 person</p>
-                    <p>Forfatter: Johanne Mosgaard</p>
-                    <p>10 minutter</p>
-                </div>
                 <div>
-                    <div class="ingredienser">
-                        <h3>ingredienser</h3>
-                        <ul>
-                            <li>50 g havregryn</li>
-                            <li>50 g havregryn</li>
-                            <li>50 g havregryn</li>
-                            <li>50 g havregryn</li>
-                            <li>50 g havregryn</li>
-                            <li>50 g havregryn</li>
-                            <li>50 g havregryn</li>
-                            <li>50 g havregryn</li>
-                        </ul>
+                    <h2>Opskrift Overskrift</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        A nemo, sint sequi voluptatibus delectus voluptates. 
+                        Laudantium adipisci inventore exercitationem neque, tenetur 
+                        officiis esse! Asperiores, deleniti!
+                    </p>
+                    <div class="opskriftTags">
+                        <p>Ret: Morgenmad, snack</p>
+                        <p>Antal: 1 person</p>
+                        <p>Forfatter: Johanne Mosgaard</p>
+                        <p>10 minutter</p>
                     </div>
-                    <div class="fremgangsmåde">
-                        <h3>Sådan gør du</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Doloribus accusantium, unde voluptatibus qui est vero 
-                            necessitatibus quod neque sequi, rerum praesentium! 
-                            Enim quam quisquam iste.
-                        </p>
-                        <h3>Noter</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Doloribus accusantium, unde voluptatibus qui est vero 
-                            necessitatibus quod neque sequi, rerum praesentium! 
-                            Enim quam quisquam iste.
-                        </p>
+                    <div class="opskriftFremgangsmåde">
+                        <div class="opskriftFremgangsmådeBox">
+                            <h3>Ingredienser</h3>
+                            <ul>
+                                <li>50 g havregryn</li>
+                                <li>50 g havregryn</li>
+                                <li>50 g havregryn</li>
+                                <li>50 g havregryn</li>
+                                <li>50 g havregryn</li>
+                                <li>50 g havregryn</li>
+                                <li>50 g havregryn</li>
+                                <li>50 g havregryn</li>
+                            </ul>
+                        </div>
+                        <div class="opskriftFremgangsmådeBox">
+                            <h3>Sådan gør du</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Doloribus accusantium, unde voluptatibus qui est vero 
+                                necessitatibus quod neque sequi, rerum praesentium! 
+                                Enim quam quisquam iste.
+                            </p>
+                            <h3>Noter</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Doloribus accusantium, unde voluptatibus qui est vero 
+                                necessitatibus quod neque sequi, rerum praesentium! 
+                                Enim quam quisquam iste.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -85,6 +87,7 @@
                 </p>
             </div>
       
+        <hr>
 
         <section class="opskriftBøger">
             <div class="opskriftBog">
@@ -122,6 +125,8 @@
             </div>
         </section>
 
+        <hr>
+
         <section class="omForfatter">
             <div class="omForfatterBox">
                 <img src="/assets/images/portræt.jpg" alt="Johanne Mosgaard">
@@ -135,7 +140,7 @@
                     På min blog Englerod deler jeg min passion for velsmagende og farverig grøntsagsmad.
                     Jeg dyrker selv en stor del af mine grøntsager og elsker processen fra jord til bord.
                     <br>
-                    Læs mere
+                    <a href="#">Læs mere</a>
                 </p>
                 <img src="/assets/images/videoScreen.jpg" alt="Youtube Video">
             </div>
