--- a/index.html
+++ b/index.html
@@ -27,7 +27,39 @@
         </header>
 
         <main class="mainIndex">
-
+            <h1>Få inspiration</h1>
+            <div class="mainImgWrap">
+                <div class="mainImg">
+                    <div class="imgTxt">
+                        <p>Havregrød</p>
+                    </div>
+                </div>
+                <div class="mainImg">
+                    <div class="imgTxt">
+                        <p>Havregrød</p>
+                    </div>
+                </div>
+                <div class="mainImg">
+                    <div class="imgTxt">
+                        <p>Havregrød</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="mainGrid">
+                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
+            </div>
         </main>
 
         <footer>
