update mads print button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/7113d691ce.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js" defer></script>
 </head>
 
@@ -68,13 +69,15 @@
                     <h3>KONTAKT</h3>
                 </div>
                 <div class="footerKontaktIkoner">
-                    <i>F</i>
-                    <i>I</i>
-                    <i>P</i>
-                    <i>Y</i>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-pinterest-p"></i>
+                    <i class="fab fa-youtube"></i>
                 </div>
-                <div>
-                    <p>Johanne Mosgaard / johanne@englerod.dk / englerod.dk</p>
+                <div class="footerInfo">
+                    <p>Johanne Mosgaard</p>
+                    <div><p>englerod.dk</p></div>
+                    <p>johanne@englerod.dk</p>
                 </div>
             </div>
             <div class="footerCopyright">
