--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
             <hr>
             <div class="mainGrid">
                 <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
-                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
-                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
-                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
-                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
-                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
-                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
-                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
-                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
-                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
-                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
-                <div class="gridItem"><div class="imgTxt"><p>Morgenmad</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Mindre retter</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Store måltider</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Søde sager</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Tilbehør</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Salater</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Supper</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Drikke</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Grøn Jul</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Glutenfri</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Bagværk</p></div></div>
+                <div class="gridItem"><div class="imgTxt"><p>Guides</p></div></div>
             </div>
         </main>
 
