--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
             </div>
             <hr>
             <div class="mainGrid">
-                <div class="gridItem gridItem1"><div class="imgTxt"><p>Morgenmad</p></div></div>
-                <div class="gridItem gridItem2"><div class="imgTxt"><p>Mindre retter</p></div></div>
-                <div class="gridItem gridItem3"><div class="imgTxt"><p>Store måltider</p></div></div>
-                <div class="gridItem gridItem4"><div class="imgTxt"><p>Søde sager</p></div></div>
-                <div class="gridItem gridItem5"><div class="imgTxt"><p>Tilbehør</p></div></div>
-                <div class="gridItem gridItem6"><div class="imgTxt"><p>Salater</p></div></div>
-                <div class="gridItem gridItem7"><div class="imgTxt"><p>Supper</p></div></div>
-                <div class="gridItem gridItem8"><div class="imgTxt"><p>Drikke</p></div></div>
-                <div class="gridItem gridItem9"><div class="imgTxt"><p>Grøn Jul</p></div></div>
-                <div class="gridItem gridItem10"><div class="imgTxt"><p>Glutenfri</p></div></div>
-                <div class="gridItem gridItem11"><div class="imgTxt"><p>Bagværk</p></div></div>
-                <div class="gridItem gridItem12"><div class="imgTxt"><p>Guides</p></div></div>
+                <div id="gridItem gridItem1"><div class="imgTxt"><p>Morgenmad</p></div></div>
+                <div id="gridItem gridItem2"><div class="imgTxt"><p>Mindre retter</p></div></div>
+                <div id="gridItem gridItem3"><div class="imgTxt"><p>Store måltider</p></div></div>
+                <div id="gridItem gridItem4"><div class="imgTxt"><p>Søde sager</p></div></div>
+                <div id="gridItem gridItem5"><div class="imgTxt"><p>Tilbehør</p></div></div>
+                <div id="gridItem gridItem6"><div class="imgTxt"><p>Salater</p></div></div>
+                <div id="gridItem gridItem7"><div class="imgTxt"><p>Supper</p></div></div>
+                <div id="gridItem gridItem8"><div class="imgTxt"><p>Drikke</p></div></div>
+                <div id="gridItem gridItem9"><div class="imgTxt"><p>Grøn Jul</p></div></div>
+                <div id="gridItem gridItem10"><div class="imgTxt"><p>Glutenfri</p></div></div>
+                <div id="gridItem gridItem11"><div class="imgTxt"><p>Bagværk</p></div></div>
+                <div id="gridItem gridItem12"><div class="imgTxt"><p>Guides</p></div></div>
             </div>
         </main>
 
