--- a/index.html
+++ b/index.html
@@ -26,27 +26,8 @@
                 </ul>
             </nav>
         </header>
-
-        <main class="mainIndex">
-            <h1>Få inspiration</h1>
-            <div class="mainImgWrap">
-                <div class="mainImg">
-                    <div class="imgTxt">
-                        <p>Havregrød</p>
-                    </div>
-                </div>
-                <div class="mainImg">
-                    <div class="imgTxt">
-                        <p>Havregrød</p>
-                    </div>
-                </div>
-                <div class="mainImg">
-                    <div class="imgTxt">
-                        <p>Havregrød</p>
-                    </div>
-                </div>
-            </div>
-            <hr>
+        <main>
+            <div class="mainIndex"></div>
             <div class="mainGrid"></div>
         </main>
         <footer>
