--- a/recipes.html
+++ b/recipes.html
@@ -15,10 +15,10 @@
     
     <div class="pageWrap">
         <header>
-            <img src="/assets/images/Englerod-logo-sort.png" alt="Englerod Logo">
+            <img src="assets/images/Englerod-logo-sort.png" alt="Englerod Logo">
             <nav>
                 <ul>
-                    <li><a href="/index.html">Opskriftsindex</a></li>
+                    <li><a href="index.html">Opskriftsindex</a></li>
                     <li><a href="#">Food prep</a></li>
                     <li><a href="#">Køkkenhaven</a></li>
                     <li><a href="#">Om englerod</a></li>
